--- a/visualisation/chart_visualisation.html
+++ b/visualisation/chart_visualisation.html
@@ -17,9 +17,6 @@
 
   $('#container').highcharts('StockChart', {
 
-    rangeSelector: {
-      selected: 4
-    },
     chart: {
         zoomType: 'xy'
     },
@@ -29,17 +26,37 @@
     },
 
     rangeSelector:{
-      enabled:false
+      selected: 4,
+      enabled:true
     },
 
-    yAxis:[{
+    legend: {
+      enabled: true,
+    },
+
+    navigator: {
+      enabled: true,
+    },
+
+    scrollbar : {
+      enabled: false,
+    },
+
+    yAxis:[
+            {
               labels: {
-                format: '{value} Watt',
+                // format: '{value}  Watt',
+                labels: {
+                  formatter: function()
+                  {
+                    return Math.round(this.value/1000) + 'k Watt';
+                  }
+                }
               },
               title: {
                   text: 'Power',
               },
-              opposite: true
+              opposite: false
             },
             {
                 labels: {
@@ -48,7 +65,7 @@
                 title: {
                     text: 'Temperatures',
                 },
-                opposite: false
+                opposite: true
             },
             {
                 labels: {
@@ -57,7 +74,7 @@
                 title: {
                     text: 'Volumetric flow rate',
                 },
-                opposite: true
+                opposite: false
             },
             {
                 labels: {
@@ -66,7 +83,7 @@
                 title: {
                     text: 'Energy',
                 },
-                opposite: true
+                opposite: false
             },
             {
                 labels: {
@@ -75,7 +92,7 @@
                 title: {
                     text: 'Relative air humidity',
                 },
-                opposite: false
+                opposite: true
             },
             {
                 labels: {
@@ -84,7 +101,7 @@
                 title: {
                     text: 'Precipitation',
                 },
-                opposite: false
+                opposite: true
             },
 
             ],
@@ -92,11 +109,6 @@
     tooltip: {
       pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> <br/>',//({point.change}%)
       valueDecimals: 2
-    },
-
-
-    legend: {
-        enabled: true,
     },
 
     series:[
@@ -122,7 +134,7 @@
     {
 
       name: 'Relative air humidity',
-      data:  RelativeFeuchte,
+      data:  Relative_Feuchte,
       yAxis: 4,
       id:'Relative_Feuchte',
       tooltip: {
@@ -177,7 +189,8 @@
       tooltip: {
                 valueSuffix: ' l/m²'
             }
-    },]
+    },
+    ]
   });
 
 
