Relative Feuchte or Relative_Feuchte?...

--- a/visualisation/chart_visualisation.html
+++ b/visualisation/chart_visualisation.html
@@ -134,7 +134,7 @@
     {
 
       name: 'Relative air humidity',
-      data:  Relative_Feuchte,
+      data:  RelativeFeuchte,
       yAxis: 4,
       id:'Relative_Feuchte',
       tooltip: {
